src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>No_pagare__c</fullName>
        <label>No pagaré</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_de_la_inmobiliaria__c</fullName>
        <label>Nombre de la inmobiliaria</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_empresa_negocio__c</fullName>
        <label>Nombre empresa / negocio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notaria_escritura__c</fullName>
        <label>Notaria escritura</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_celular_1__c</fullName>
        <label>Número de celular 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_celular_2__c</fullName>
        <label>Número de celular 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_credito__c</fullName>
        <label>Número de crédito</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_documento__c</fullName>
        <externalId>true</externalId>
        <label>Número de documento</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Numero_de_empleados__c</fullName>
        <label>Número de empleados</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_solicitantes__c</fullName>
        <label>Número de solicitantes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Numero_de_telefono_celular__c</fullName>
        <label>Número de celular</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Observaciones__c</fullName>
        <label>Observaciones</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Personas_a_cargo__c</fullName>
        <label>Personas a cargo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plazo__c</fullName>
        <label>Plazo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Precio_inmueble__c</fullName>
        <label>Precio inmueble</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Propietario_de_la_cuenta__c</fullName>
        <formula>Owner.FirstName&amp;&quot; &quot;&amp;Owner.MiddleName&amp;&quot; &quot;&amp;Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Propietario de la cuenta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referencias_comerciales__c</fullName>
        <label>Referencias comerciales</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Si</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relacion_cuota_ingreso__c</fullName>
        <label>Relación cuota/ingreso</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Resultado_prevalidador__c</fullName>
        <label>Resultado prevalidador</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cliente_prevalidado__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Viable</fullName>
                </value>
                <value>
                    <fullName>No viable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salario__c</fullName>
        <label>Salario</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Score_interno__c</fullName>
        <label>Score interno</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_prevalidador__c</fullName>
        <label>Score prevalidador</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sector_economico__c</fullName>
        <label>Sector económico</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seguros__c</fullName>
        <label>Seguros</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sexo__c</fullName>
        <label>Sexo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Femenino</fullName>
                </value>
                <value>
                    <fullName>Masculino</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sistema_amortizacion__c</fullName>
        <label>Sistema amortización</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solicitud_al_gerente_comercial__c</fullName>
        <label>Solicitud al Gerente Comercial</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Solicitud</fullName>
                </value>
                <value>
                    <fullName>Aprobado</fullName>
                </value>
                <value>
                    <fullName>Devuelta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subsidio__c</fullName>
        <label>Subsidio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Telefono_2__c</fullName>
        <label>Teléfono 2</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefono__c</fullName>
        <label>Teléfono 1</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefono_laboral__c</fullName>
        <label>Teléfono laboral</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tipo__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Natural</fullName>
                </value>
                <value>
                    <fullName>Jurídico</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_cliente__c</fullName>
        <label>Tipo de cliente</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Captura de información</fullName>
                </value>
                <value>
                    <fullName>Solicitud prevalidación</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_contrato__c</fullName>
        <label>Tipo de contrato</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prestación de servicios</fullName>
                </value>
                <value>
                    <fullName>Pensionado</fullName>
                </value>
                <value>
                    <fullName>Independiente</fullName>
                </value>
                <value>
                    <fullName>Cooperativo</fullName>
                </value>
                <value>
                    <fullName>Término fijo</fullName>
                </value>
                <value>
                    <fullName>Término indefinido</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_documento__c</fullName>
        <label>Tipo de documento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cédula ciudadanía</fullName>
                    <default>true</default>
                    <label>Cédula ciudadanía</label>
                </value>
                <value>
                    <fullName>Cédula de extranjería</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_inmueble__c</fullName>
        <label>Tipo de inmueble</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_ocupacion__c</fullName>
        <label>Tipo de ocupación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Empleado</fullName>
                </value>
                <value>
                    <fullName>Independiente</fullName>
                </value>
                <value>
                    <fullName>Empleado con negocio</fullName>
                </value>
                <value>
                    <fullName>Estudiante</fullName>
                </value>
                <value>
                    <fullName>Pensionado</fullName>
                </value>
                <value>
                    <fullName>Ama de casa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_pcto_CDT__c</fullName>
        <label>Tipo de pcto CDT</label>
        <summaryFilterItems>
            <field>Opportunity.Tipo_de_producto__c</field>
            <operation>equals</operation>
            <value>CDT</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tipo_de_pcto_asignacion_de_cupo__c</fullName>
        <label>Tipo de pcto asignación de cupo</label>
        <summaryFilterItems>
            <field>Opportunity.Tipo_de_producto__c</field>
            <operation>equals</operation>
            <value>Asignación de cupo</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tipo_de_pcto_credito_de_vivienda_nueva__c</fullName>
        <label>Tipo de pcto credito de vivienda nueva</label>
        <summaryFilterItems>
            <field>Opportunity.Tipo_de_producto__c</field>
            <operation>equals</operation>
            <value>Crédito de vivienda nueva</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tipo_de_pcto_credito_de_vivienda_usada__c</fullName>
        <label>Tipo de pcto crédito de vivienda usada</label>
        <summaryFilterItems>
            <field>Opportunity.Tipo_de_producto__c</field>
            <operation>equals</operation>
            <value>Crédito de vivienda usada</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tipo_de_pcto_cuenta_de_ahorros__c</fullName>
        <label>Tipo de pcto cuenta de ahorros</label>
        <summaryFilterItems>
            <field>Opportunity.Tipo_de_producto__c</field>
            <operation>equals</operation>
            <value>Cuenta de ahorros</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tipo_de_pcto_leasing_vivienda_nueva__c</fullName>
        <label>Tipo de pcto leasing vivienda nueva</label>
        <summaryFilterItems>
            <field>Opportunity.Tipo_de_producto__c</field>
            <operation>equals</operation>
            <value>Leasing habitacional vivienda nueva</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tipo_de_pcto_leasing_vivienda_usada__c</fullName>
        <label>Tipo de pcto leasing vivienda usada</label>
        <summaryFilterItems>
            <field>Opportunity.Tipo_de_producto__c</field>
            <operation>equals</operation>
            <value>Leasing habitacional vivienda usada</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tipo_de_pcto_mejoramiento_de_vivienda__c</fullName>
        <label>Tipo de pcto mejoramiento de vivienda</label>
        <summaryFilterItems>
            <field>Opportunity.Tipo_de_producto__c</field>
            <operation>equals</operation>
            <value>Mejoramiento de vivienda</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tipo_de_producto_que_le_interesa__c</fullName>
        <label>Tipo de producto que le interesa</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Crédito de vivienda nueva</fullName>
                </value>
                <value>
                    <fullName>Crédito de vivienda usada</fullName>
                </value>
                <value>
                    <fullName>Mejoramiento de vivienda</fullName>
                </value>
                <value>
                    <fullName>Asignación de cupo</fullName>
                </value>
                <value>
                    <fullName>Compra de cartera</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_registro_de_cuenta__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de registro de cuenta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_vivienda__c</fullName>
        <label>Tipo de vivienda</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valida_aporta_ingresos__c</fullName>
        <label>Valida aporta ingresos</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validar_apellido__c</fullName>
        <label>Validar apellido</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validar_direccion_de_oficina__c</fullName>
        <label>Validar dirección de oficina</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validar_direccion_de_residencia__c</fullName>
        <label>Validar dirección de residencia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validar_nombre__c</fullName>
        <label>Validar nombre</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validar_numero_de_celular__c</fullName>
        <label>Validar número de celular</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validar_numero_de_documento__c</fullName>
        <label>Validar número de documento</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validar_telefono_de_oficina__c</fullName>
        <label>Validar teléfono de oficina</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Validar_telefono_residencia__c</fullName>
        <label>Validar teléfono residencia</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Valor_activos__c</fullName>
        <label>Valor activos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_aprobado_previo__c</fullName>
        <label>Valor aprobado previo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_arriendo__c</fullName>
        <label>Valor arriendo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_cuota_sugerida__c</fullName>
        <label>Valor cuota sugerida</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ltv__c</fullName>
        <label>ltv</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>Propietario_de_la_cuenta__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos Los clientes / convenios</label>
    </listViews>
    <listViews>
        <fullName>Clientes_Canal_Digital</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Canal_digital__c</field>
            <operation>contains</operation>
            <value>Si</value>
        </filters>
        <label>Clientes Canal Digital</label>
        <sharedTo>
            <role>Analista_de_Mercadeo</role>
            <role>Asor_de_leads</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Convenios</fullName>
        <columns>Estado_de_aprobacion_Riesgos__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Tipo_de_documento__c</columns>
        <columns>Numero_de_documento__c</columns>
        <columns>Ciudad_de_residencia__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Convenio</value>
        </filters>
        <filters>
            <field>Solicitud_al_gerente_comercial__c</field>
            <operation>equals</operation>
            <value>Solicitud,Devuelta</value>
        </filters>
        <label>Convenios pendientes por aprobar</label>
    </listViews>
    <listViews>
        <fullName>Convenios_aprobados</fullName>
        <columns>Consecutivo__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Tipo_de_documento__c</columns>
        <columns>Numero_de_documento__c</columns>
        <columns>Ciudad_de_residencia__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Solicitud_al_gerente_comercial__c</field>
            <operation>equals</operation>
            <value>Aprobado</value>
        </filters>
        <label>Convenios aprobados</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Numero_de_documento__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Numero_de_telefono_celular__c</columns>
        <columns>PC_EMAIL</columns>
        <columns>Cliente_prevalidado__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <label>Mis Clientes / Convenios</label>
    </listViews>
    <recordTypes>
        <fullName>Activacion_de_cuenta_personales</fullName>
        <active>true</active>
        <label>Activación de cuentas personales</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cuenta</fullName>
        <active>true</active>
        <label>Cuenta</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CL001_Valida_check_list_convenio_per_nat</fullName>
        <active>true</active>
        <description>Valida el registro del check list de convenios para personas naturales</description>
        <errorConditionFormula>AND (  
 RecordType.Name = &quot;Convenio&quot;, 
  ISPICKVAL (  Tipo__c , &quot;Natural&quot;),
  ISPICKVAL (  Fotocopia_Rut_persona_natural__c , &quot;No&quot;),
  ISPICKVAL (  Fotocopia_cedula_de_ciudadania__c , &quot;No&quot;),
  ISPICKVAL ( Convenio_firmado__c , &quot;No&quot;), 
  ISPICKVAL ( Referencias_comerciales__c , &quot;No&quot;)
)</errorConditionFormula>
        <errorMessage>CL-001 Para enviar la solicitud al Gerente Comercial, debe diligenciar el Check list de Persona Natural adicional a convenio firmado y referencias comerciales</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CL002_Valida_check_list_convenio_per_jur</fullName>
        <active>true</active>
        <description>Valida que cuando el tipo registro se igual a Convenio, y el tipo sea igual a Jurídico, se deben diligenciar los campos del check list de convenios para personas jurídicas.</description>
        <errorConditionFormula>AND (  
 RecordType.Name = &quot;Convenio&quot;, 
  ISPICKVAL (  Tipo__c , &quot;Jurídico&quot;),
  ISPICKVAL (  Fotocopia_Rut_persona_juridica__c , &quot;No&quot;),
  ISPICKVAL (  Fotocopia_cedula_representante_legal__c , &quot;No&quot;),
  ISPICKVAL (  Camara_de_comercio__c , &quot;No&quot;),
  ISPICKVAL ( Convenio_firmado__c , &quot;No&quot;), 
  ISPICKVAL ( Referencias_comerciales__c , &quot;No&quot;)
)</errorConditionFormula>
        <errorMessage>CL-002 Para enviar la solicitud al Gerente Comercial, debe diligenciar el Check list de Persona Jurídica, adicional a convenio firmado y referencias comerciales</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CL003_Valida_campo_numero_de_documento</fullName>
        <active>true</active>
        <description>Valida que el campo número de documento sea solo número.</description>
        <errorConditionFormula>NOT ISNUMBER( Numero_de_documento__c )</errorConditionFormula>
        <errorDisplayField>Numero_de_documento__c</errorDisplayField>
        <errorMessage>CL-003. Este campo solo acepta caracteres numéricos.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CL004_Valida_campo_solicitud_al_gerente</fullName>
        <active>true</active>
        <description>Valida que solamente el gerente comercial apruebe o devuelva una solicitud.</description>
        <errorConditionFormula>AND ( 
$Profile.Name &lt;&gt; &quot;Gerente Comercial&quot;, 

OR ( 
ISPICKVAL (  Solicitud_al_gerente_comercial__c, &quot;Aprobada&quot;), 
ISPICKVAL (  Solicitud_al_gerente_comercial__c, &quot;Devuelta&quot;) 
))</errorConditionFormula>
        <errorDisplayField>Solicitud_al_gerente_comercial__c</errorDisplayField>
        <errorMessage>CL-004. Con su perfil no puede aprobar o devolver solicitudes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CL005_El_celular_debe_tener_10_caractere</fullName>
        <active>true</active>
        <description>Valida que en el campo número de teléfono celular sea solamente numérico, y que contenga 10 caracteres.</description>
        <errorConditionFormula>AND(
$Profile.Id &lt;&gt; &quot;00eo0000000uvB5&quot;,
NOT ISBLANK(Numero_de_telefono_celular__c),
OR(
LEN( Numero_de_telefono_celular__c)  &lt;&gt;  10,
NOT ISNUMBER(  Numero_de_telefono_celular__c )

))</errorConditionFormula>
        <errorDisplayField>Numero_de_telefono_celular__c</errorDisplayField>
        <errorMessage>CL-005 El campo debe tener 10 caracteres sin espacios. No incluir guiones ni paréntesis.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CL006_El_telefono_debe_tener_7_caracter</fullName>
        <active>true</active>
        <description>Valida que el número de teléfono fijo tenga no contenga menos de siete (7) dígitos.</description>
        <errorConditionFormula>AND(
$Profile.Id &lt;&gt; &quot;00eo0000000uvB5&quot;,

OR(
   LEN(Phone) = NULL,
   7 &lt; LEN(Phone)
  ))</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>CL-006 El campo solo debe tener máximo 7 caracteres sin espacios. No incluir guiones ni paréntesis.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CL007_Valida_caracteres_campo_barrio</fullName>
        <active>true</active>
        <description>Valida que en el campo Barrio solamente ingresen texto.</description>
        <errorConditionFormula>AND(
$Profile.Id &lt;&gt; &quot;00eo0000000uvB5&quot;,
NOT( REGEX( Barrio__c , &quot;^[a-zA-Z_áéíóúñ\\s]*$&quot;))
)</errorConditionFormula>
        <errorDisplayField>Barrio__c</errorDisplayField>
        <errorMessage>CL-007. Solamente es permitido ingresar texto.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CL008_Valida_el_campo_prog_MI_CASA_YA</fullName>
        <active>true</active>
        <description>Valida que cuando el campo Aprobado con programa MI CASA YA sea igual a &quot;Si&quot; se diligencie el campo Código de familia.</description>
        <errorConditionFormula>AND(
$Profile.Id &lt;&gt; &quot;00eo0000000uvB5&quot;,
 ISPICKVAL(   Aprobado_con_programa_MI_CASA_YA__c  ,&quot;Si&quot;),
 ISBLANK(  Codigo_Familia__c  )  
)</errorConditionFormula>
        <errorMessage>CL-008. Si el campo ¿Aprobado con programa MI CASA YA? es &quot; Si &quot; debe diligenciar el campo Código de familia.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CL009_Valida_cantidad_de_caracter_de_CC</fullName>
        <active>true</active>
        <description>Valida que en el campo Número de documento no se ingresen ceros ni letras.</description>
        <errorConditionFormula>/*5 &gt;= LEN ( Numero_de_documento__c)*/
/*REGEX(, &quot;^0&quot;)*/
/*OR( 
  BEGINS(Numero_de_documento__c, &quot;0000000000&quot;),
  5 &gt;= LEN ( Numero_de_documento__c)
)*/
NOT(
OR(
ISBLANK(Numero_de_documento__c),
REGEX( Numero_de_documento__c, &quot;[^0][0-9]{5,10}&quot;)
)
)</errorConditionFormula>
        <errorDisplayField>Numero_de_documento__c</errorDisplayField>
        <errorMessage>CL-009. El número de documento no es válido.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CL010_Valida_si_es_mayor_de_edad</fullName>
        <active>true</active>
        <description>Valida que en el campo Edad sea igual o mayor a 18.</description>
        <errorConditionFormula>AND(
$Profile.Id &lt;&gt; &quot;00eo0000000uvB5&quot;,
18&gt; Edad__c
)</errorConditionFormula>
        <errorMessage>CL-010. El cliente debe ser mayor de edad.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CL011_Valida_nombre_y_apellido</fullName>
        <active>true</active>
        <description>Valida que solamente el administrador de CRM y los perfiles comerciales modifiquen la información del cliente.</description>
        <errorConditionFormula>AND(

OwnerId &lt;&gt; $User.Id &amp;&amp; 
$Profile.Id &lt;&gt; &quot;00eo0000000uvB5&quot;,
$Profile.Id &lt;&gt; &quot;00eo0000000TUb7&quot;,
$Profile.Id &lt;&gt; &quot;00eo0000000f645&quot;,
$Profile.Id &lt;&gt; &quot;00eo0000000fznJ&quot;,
$Profile.Id &lt;&gt; &quot;00eo0000000g2vT&quot;,

OR(
ISCHANGED( LastName ), 
ISCHANGED( FirstName ),
ISCHANGED( MiddleName )

))</errorConditionFormula>
        <errorMessage>CL-011. No modificar los datos del cliente.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CL012_Valida_el_propietario_de_la_cuenta</fullName>
        <active>true</active>
        <description>Valida que la cuenta del cliente solamente pueda ser modificada por el propietario de la cuenta.</description>
        <errorConditionFormula>OwnerId  &lt;&gt;  $User.Id &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000uvB5&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000Tr0P&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo00000016F80&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000TUb7&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000fznJ&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000Tr0Z&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000f645&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo00000016F80&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000TqzW&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000TzBZ&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000TuFy&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000001EIPn&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000Tr0Z&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000TuFy&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000Tr0P&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000Tr0K&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000f7LE&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo00000013vGj&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000g2vT&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000TqzW&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000TUaz&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000PswQ&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000f7LO&quot;</errorConditionFormula>
        <errorMessage>CL-012.La cuenta del cliente solamente puede ser modificada por el propietario de la cuenta o por los líderes de área.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CL013_Valida_direccion_de_residencia</fullName>
        <active>true</active>
        <description>Valida que no se introduzcan caracteres no autorizados en el campo dirección de residencia.</description>
        <errorConditionFormula>AND(
$Profile.Id &lt;&gt; &quot;00eo0000000uvB5&quot;,

OR(

( CONTAINS( Direccion_de_residencia__c , &quot;°&quot;)) ,
( CONTAINS( Direccion_de_residencia__c , &quot;ª&quot;)) ,
( CONTAINS( Direccion_de_residencia__c , &quot;_&quot;)) ,
( CONTAINS( Direccion_de_residencia__c , &quot;¬&quot;)) ,
( CONTAINS( Direccion_de_residencia__c , &quot;´&quot;)) ,
( CONTAINS( Direccion_de_residencia__c , &quot;|&quot;)) ,
( CONTAINS( Direccion_de_residencia__c , &quot;~&quot;)) ,
( CONTAINS( Direccion_de_residencia__c , &quot;`&quot;))

))</errorConditionFormula>
        <errorDisplayField>Direccion_de_residencia__c</errorDisplayField>
        <errorMessage>CL-013. Hay caracteres no permitidos en este campo. Solamente se pueden ingresar el símbolo numeral (#), guión al medio (-).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CL014_Valida_Ciudad_de_residencia</fullName>
        <active>true</active>
        <description>Valida en el campo Ciudad de residencia solamente se ingrese texto.</description>
        <errorConditionFormula>AND(
NOT ISBLANK(Ciudad_de_residencia__c),
$Profile.Id &lt;&gt; &quot;00eo0000000uvB5&quot;,
$Profile.Id &lt;&gt; &quot;00eo00000016F80&quot;,

OR(
NOT( REGEX( Ciudad_de_residencia__c , &quot;^[a-zA-Z_áéíóú\\s]*$&quot;))
))</errorConditionFormula>
        <errorDisplayField>Ciudad_de_residencia__c</errorDisplayField>
        <errorMessage>CL-014. Este campo es solamente texto. No ingresar puntos, guiones o paréntesis.</errorMessage>
    </validationRules>
</CustomObject>